--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </div>
     <div id="controls"></div>
     <div id="footer">
-      Para uso interno de ACM-UPM. Si tienes alguna queja, duda o sugerencia ponte en contacto con cualquier miembro de la asociaara que esta sea ignorada lo más pronto posible.<br>
+      Para uso interno de ACM-UPM. Si tienes alguna queja, duda o sugerencia ponte en contacto con cualquier miembro de la asociación para que esta sea ignorada lo más pronto posible.<br>
       Por @GoLoT y @Joex23
     </div>
     <div id="img-out"></div>
