Mostrar aula y grupo en horario

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 	<a id="pnglink" href="" download="horario.png">Descargar PNG</a>
       </div>
     </div>
+    <div style="margin: 0 auto; width: 90%"><label><input type="checkbox" id="showClass" onclick="redrawCanvas()">Mostrar aula</label><br><label><input type="checkbox" id="showGroup" onclick="redrawCanvas()">Mostrar grupo</label></div>
     <div id="controls"></div>
     <div id="footer">
       Para uso interno de ACM-UPM. Si tienes alguna queja, duda o sugerencia ponte en contacto con cualquier miembro de la asociación para que esta sea ignorada lo más pronto posible.<br>
