--- a/index.html
+++ b/index.html
@@ -39,7 +39,11 @@
   <div style="margin: 0 auto; width: 90%"><label><input type="checkbox" id="showClass" onclick="redrawCanvas()">Mostrar aula</label><br><label><input type="checkbox" id="showGroup" onclick="redrawCanvas()">Mostrar grupo</label></div>
   <div id="controls"></div>
   <div id="footer">
-    Para uso interno de ACM-UPM. Si tienes alguna queja, duda o sugerencia ponte en contacto con cualquier miembro de la asociación para que esta sea ignorada lo más pronto posible.<br> Por @GoLoT y @Joex23
+    Para uso interno de ACM-UPM.
+    <br>
+    Si tienes alguna queja, duda o sugerencia ponte en contacto con cualquier miembro de la asociación para que esta sea ignorada lo más pronto posible.
+    <br>
+    Por @GoLoT, @Joex23, @svg153, @ignaciobll, @Realkaiser94
   </div>
   <div id="img-out"></div>
 </body>
