Modified HTML to add link to repository and extra info on footer

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <meta charset="utf-8">
 
 <head>
-  <title>Mierdahorario de la FI</title>
+  <title>Generador de horarios para la FI-UPM</title>
 
   <link rel="stylesheet" type="text/css" href="css/style.css">
 
@@ -39,11 +39,13 @@
   <div style="margin: 0 auto; width: 90%"><label><input type="checkbox" id="showClass" onclick="redrawCanvas()">Mostrar aula</label><br><label><input type="checkbox" id="showGroup" onclick="redrawCanvas()">Mostrar grupo</label></div>
   <div id="controls"></div>
   <div id="footer">
-    Para uso interno de ACM-UPM.
+    Inicialmente para uso interno de ACM-UPM. Es una herramienta para comprobar rápidamente el solapamiento de asignaturas entre cursos sin tener que consultar cada PDF de cada grupo manualmente, y poder elegir asignaturas y grupos con más facilidad.
     <br>
     Si tienes alguna queja, duda o sugerencia ponte en contacto con cualquier miembro de la asociación para que esta sea ignorada lo más pronto posible.
     <br>
     Por @GoLoT, @Joex23, @svg153, @ignaciobll, @Realkaiser94
+    <br>
+    Si quieres contribuir, puedes hacerlo mediante una Pull Request en el repositorio de github que puedes encontrar <a href="https://github.com/GoLoT/Horario-FI-UPM">aquí</a>.
   </div>
   <div id="img-out"></div>
 </body>
