Added hack to prevent caching of JS script between updates

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <title>Generador de horarios para la FI-UPM</title>
 
   <link rel="stylesheet" type="text/css" href="css/style.css">
-
-  <script language="JavaScript" type="text/javascript" src="js/main.js"></script>
+    <!-- Incrementar .js?NUM al realizar cambios en main.js para forzar navegadores a descargar script en vez de utilizar el guardado en cache -->
+  <script language="JavaScript" type="text/javascript" src="js/main.js?1"></script>
 </head>
 
 <body onload="popList()">
